Preview 4

New:
- CONTRIB-31: "Lazy" One-to-One relation. (Thanks: Gabriel Schenker)

Fixed:
- Server Explorer drag'n drop is now supported on international versions of VS. (Patch: Daniel Rothmaler)
- Server Explorer support changed to VS Connection Service and its Connection Hierarchies, instead of the Server Explorer's UIHierarchies to
  prevent the flicker during the hierarchy traversing process.
- Closing Contrib-25. ValidateNotSameAttribute Won't be supported ATM.
- CONTRIB-33: When adding a table (SQL Server) to the designer which has a primary key of type uniqueidentifier ActiveWriter should use "Guid" instead of "Native" as generator (Thanks: Gabriel Schenker)

Preview 3

New:
- Now optionally generates NHibernate hbm.xml files.
- Namespace in generated code is now customizable (Idea: Robert van Hoornaar)
- Imports in generated code is now customizable (Idea: Robert van Hoornaar)
- Model classes can override model level base class definition. (Patch: Robert van Hoornaar)
- Model classes can override model level generics generation. (Idea: Robert van Hoornaar)
- Contrib-26: Add support for AR Nested / NH Component mappings. Allow the ability to specify a column prefix for active record. (thx: Adam Tybor)
- Optionally generates classes implementing INotifyPropertyChanged.
- Support for drag-drop from Server Explorer for MySQL databases. Requires MySQL Connector/Net (5.1). (Patch: Michael Morton)
- Support for custom types through IUserType. See http://support.castleproject.org/browse/CONTRIB-28#action_11456 for usage. (Patch: Ricardo Stuven)
- Ability to define a nested class with a different property name than the nested class (Idea: Craig Neuwirt)

Fixed:
- Contrib-23: Produces CascadeEnum instead of ManyRelationCascadeEnum
- Ability to generate virtual properties to support Lazy properly (thx: Ayende)
- Make sure that Char and AnsiChar types are treated as a System.String types, instead of System.Char types (patch: Ayende)