@@ -6,9 +6,10 @@ New:
 Fixed:
 - Server Explorer drag'n drop is now supported on international versions of VS. (Patch: Daniel Rothmaler)
 - Server Explorer support changed to VS Connection Service and its Connection Hierarchies, instead of the Server Explorer's UIHierarchies to
-  prevent the flicker during the hierarchy traversing process.
+  prevent the flicker during the hierarchy traversing process.  (Patch: Daniel Rothmaler)
 - Closing Contrib-25. ValidateNotSameAttribute Won't be supported ATM.
 - CONTRIB-33: When adding a table (SQL Server) to the designer which has a primary key of type uniqueidentifier ActiveWriter should use "Guid" instead of "Native" as generator (Thanks: Gabriel Schenker)
+- Assembly names in NHibernate configs are incorrectly stripped from the name. (Thanx: Fedde)
 
 Preview 3
 
